Changed returnUrl to not include protocol (https://lasergroup.teamwork.com/#/tasks/22759669)

--- a/src/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml
+++ b/src/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml
@@ -156,7 +156,7 @@
 
 
 
-                <input id="ReturnUrl-@uniqueId" name="ReturnUrl" type="hidden" value="@Context.Request.ToUrlString()" />
+                <input id="ReturnUrl-@uniqueId" name="ReturnUrl" type="hidden" value="@Context.Request.RawUrl" />
                 <input id="Id-@uniqueId" name="Id" type="hidden" value="@uniqueId" />
                 <input id="MediaId-@uniqueId" name="MediaId" type="hidden" value="" />
                 if (!string.IsNullOrEmpty(noteInterne)) {
