--- a/src/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml
+++ b/src/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml
@@ -69,7 +69,7 @@
                 }
             }
         </div>
-        <input id="ReturnUrl-@uniqueId" name="ReturnUrl" type="hidden" value="@Context.Request.ToUrlString()" />
+        <input id="ReturnUrl-@uniqueId" name="ReturnUrl" type="hidden" value="@Context.Request.RawUrl" />
         <input id="Id-@uniqueId" name="Id" type="hidden" value="@uniqueId" />
         <input id="MediaId-@uniqueId" name="MediaId" type="hidden" value="" />
         @Html.AntiForgeryTokenOrchard()
