--- a/src/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Index.cshtml
+++ b/src/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Index.cshtml
@@ -3,7 +3,7 @@
 <h1>@T("Redirects")</h1>
 
 <div class="manage">
-    @Html.ActionLink(T("Add").Text, "Add", "RedirectsAdmin", null, new { @class = "button primaryAction" })
+    @Html.ActionLink(T("Add").Text, "Add", "RedirectsAdmin", new { page = Request.QueryString["page"] }, new { @class = "button primaryAction" })
 </div>
 
 @Html.Partial("ListPartial")
