fixes to SEO redirects: - path ending with '/' are now managed correctly - management of path containing querystring - cache to speed up redirects resolution - empty destination is now allowed

--- a/src/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Index.cshtml
+++ b/src/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Index.cshtml
@@ -1,9 +1,13 @@
-﻿
+﻿@{ 
+    string counter = string.Format(T("Number of cached elements: {0}").Text, Model.CachedCounter);
+}
 
 <h1>@T("Redirects")</h1>
 
 <div class="manage">
+    <span>@counter</span>
     @Html.ActionLink(T("Add").Text, "Add", "RedirectsAdmin", new { page = Request.QueryString["page"] }, new { @class = "button primaryAction" })
+    @Html.ActionLink(T("Clean Redirects Cache").Text, "ClearCache", "RedirectsAdmin", new { page = Request.QueryString["page"] }, new { @class = "button primaryAction" })
 </div>
 
 @Html.Partial("ListPartial")
