--- a/src/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Index.cshtml
+++ b/src/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Index.cshtml
@@ -5,7 +5,7 @@
 <h1>@T("Redirects")</h1>
 
 <div class="manage">
-    <span>@counter</span>
+    <span style="position:relative;top:0.4em;">@counter</span>
     @Html.ActionLink(T("Add").Text, "Add", "RedirectsAdmin", new { page = Request.QueryString["page"] }, new { @class = "button primaryAction" })
     @Html.ActionLink(T("Clean Redirects Cache").Text, "ClearCache", "RedirectsAdmin", new { page = Request.QueryString["page"] }, new { @class = "button primaryAction" })
 </div>
