--- a/src/Modules/Laser.Orchard.Mobile/Views/PushNotification/Index.cshtml
+++ b/src/Modules/Laser.Orchard.Mobile/Views/PushNotification/Index.cshtml
@@ -14,13 +14,14 @@
     <button type="submit" name="@Html.NameFor(m => m.Search.Operation)" value="Clear">@T("Clear Search")</button>
     <label>@T("Machine Name to reassign:")</label>
     <select name="@Html.NameFor(m => m.Search.SelectedMachineName)">
-        @foreach(var machine in Model.MachineNames) {
+        @foreach (var machine in Model.MachineNames) {
             <option value="@machine">@machine &rarr; @Model.Search.ActualMachineName</option>
         }
     </select>
     <button type="submit" name="@Html.NameFor(m => m.Search.Operation)" value="Rename" onclick="return confirm('@T("Are you sure you want to reassign ALL devices from the selected Machine Name to {0}?", Model.Search.ActualMachineName).Text.Replace("'", "\\'")');">@T("Assign to Current Machine")</button>
     <label>@T("Actual Machine Name: {0}", Model.Search.ActualMachineName)</label>
     @Html.HiddenFor(m => m.Search.ActualMachineName)
+    <br/><span class="hint">@T("To allow push notification to devices registered on multiple servers, please add the following line to the Settings.txt file (values separated by space):<br/>PushRegistrationAllowedMachineNames: server1 server2 server3")</span>
 </fieldset>
 }
 <br />
