--- a/src/Modules/Laser.Orchard.Mobile/Views/PushNotification/Index.cshtml
+++ b/src/Modules/Laser.Orchard.Mobile/Views/PushNotification/Index.cshtml
@@ -21,7 +21,8 @@
     <button type="submit" name="@Html.NameFor(m => m.Search.Operation)" value="Rename" onclick="return confirm('@T("Are you sure you want to reassign ALL devices from the selected Machine Name to {0}?", Model.Search.ActualMachineName).Text.Replace("'", "\\'")');">@T("Assign to Current Machine")</button>
     <label>@T("Actual Machine Name: {0}", Model.Search.ActualMachineName)</label>
     @Html.HiddenFor(m => m.Search.ActualMachineName)
-    <br/><span class="hint">@T("To allow push notification to devices registered on multiple servers, please add the following line to the Settings.txt file (values separated by space):<br/>PushRegistrationAllowedMachineNames: server1 server2 server3")</span>
+    <br />
+    <span class="hint">@T("To allow push notification to devices registered on multiple servers, please add the following line to the Settings.txt file (values separated by space):<br/>PushRegistrationAllowedMachineNames: server1 server2 server3")</span>
 </fieldset>
 }
 <br />
