--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/FavoriteCulturePart_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/FavoriteCulturePart_Edit.cshtml
@@ -4,7 +4,7 @@
     Orchard.Data.IRepository<Orchard.Localization.Records.CultureRecord> _cultureRepository;
     if (WorkContext.TryResolve<Orchard.Data.IRepository<Orchard.Localization.Records.CultureRecord>>(out _cultureRepository)) {
         var siteAvailableCultures = _cultureRepository.Table.ToList();
-        @if (siteAvailableCultures.Count() > 1) {
+        if (siteAvailableCultures.Count() > 1) {
             <fieldset>
                 <legend>@Html.LabelFor(m => m.Culture, T("Favorite Culture"))</legend>
 
