--- a/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml
@@ -7,6 +7,8 @@
     Script.Require("rcswitcher").AtHead();
     Style.Require("rcswitcher").AtHead();
     bool disabledElements = Model.PushSent;
+    var retryHelpText = T("Try to send again this notification to devices that encountered communication errors and to newly registered devices");
+    var retryHelpDisabled = T("Retry is running. Please wait for its completion and reload this page.");
 }
 @using (Script.Foot()) {
     <script type="text/javascript">
@@ -49,9 +51,9 @@
             });
 
             $('#retry-button').click(function () {
-                if (confirm("@T("Do you want to retry sending this notification?").Text.Replace("\"", "\\\"")")) {
+                if (confirm("@T("Do you want to retry sending this notification to devices that encountered communication errors and to newly registered devices?").Text.Replace("\"", "\\\"")")) {
                     $('#retry-button').attr("disabled", "disabled");
-                    $('#retry-button').attr("title", "@T("Retry is running. Please wait for its completion and reload this page.").Text.Replace("\"", "\\\"")");
+                    $('#retry-button').attr("title", "@retryHelpDisabled.Text.Replace("\"", "\\\"")");
                     $('#retry-button').css("opacity", "0.3");
                     $.ajax({
                         type: 'POST',
@@ -61,7 +63,7 @@
                             if (result.result == "ko") {
                                 alert(result.error);
                                 $('#retry-button').removeAttr("disabled");
-                                $('#retry-button').attr("title", "@T("Try to send again this notification to devices that generated communication errors").Text.Replace("\"", "\\\"")");
+                                $('#retry-button').attr("title", "@retryHelpText.Text.Replace("\"", "\\\"")");
                                 $('#retry-button').css("opacity", "1");
                             }
                         }
@@ -240,10 +242,10 @@
                     @if (Model.SentCounters.TotToTryAgain > 0) {
                         <td>
                             @if (Model.SentCounters.TotPending == 0) {
-                                <button type="button" id="retry-button" title="@T("Try to send again this notification to devices that generated communication errors")">@T("Retry")</button>
+                                <button type="button" id="retry-button" title="@retryHelpText">@T("Retry")</button>
                             }
                             else {
-                                <button type="button" id="retry-button" disabled="disabled" style="opacity:0.3" title="@T("Retry is running. Please wait for its completion and reload this page.")">@T("Retry")</button>
+                                <button type="button" id="retry-button" disabled="disabled" style="opacity:0.3" title="@retryHelpDisabled">@T("Retry")</button>
                             }
                         </td>
                     }
