push retry: fixed some translations, renamed a file and added a notification

--- a/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml
@@ -65,6 +65,8 @@
                                 $('#retry-button').removeAttr("disabled");
                                 $('#retry-button').attr("title", "@retryHelpText.Text.Replace("\"", "\\\"")");
                                 $('#retry-button').css("opacity", "1");
+                            } else if (result.result == "ok") {
+                                alert(@T("Retry successfully planned."));
                             }
                         }
                     });
