mobile retry: fixed js error

--- a/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.Mobile/Views/EditorTemplates/Parts/MobilePush_Edit.cshtml
@@ -66,7 +66,7 @@
                                 $('#retry-button').attr("title", "@retryHelpText.Text.Replace("\"", "\\\"")");
                                 $('#retry-button').css("opacity", "1");
                             } else if (result.result == "ok") {
-                                alert(@T("Retry successfully planned."));
+                                alert("@T("Retry successfully planned.")");
                             }
                         }
                     });
