tinymce enhancement: added hint with default value for init script, refactoring

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/TinyMceSiteSettings.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/TinyMceSiteSettings.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Laser.Orchard.StartupConfig.TinyMceEnhancement.TinyMceSiteSettingsPart
+@{
+    Script.Require("jQuery");
+}
 
 <fieldset>
     <legend>@T("TinyMce Settings")</legend>
@@ -6,6 +9,8 @@
         <label for="@Html.FieldIdFor(m => m.InitScript)">@T("Init Script")</label>
         @Html.TextAreaFor(m => m.InitScript, new { @class = "text large" })
         <span class="hint">@T("Content of the init method for TinyMce.")</span>
+        <button type="button" id="btnDefaultInitValue" style="background-color:lightgray;color:white">@T("Show/Hide default value")</button>
+        <span id="lblDefaultInitValue" class="hint" style="display:none">@Html.Raw(Model.DefaultInitScript.Replace("\n", "<br/>"))</span>
     </div>
     <div>
         <label for="@Html.FieldIdFor(m => m.AdditionalPlugins)">@T("Additional Plugins")</label>
@@ -13,3 +18,10 @@
         <span class="hint">@T("A list of additional plugins. Use space as separator (eg. plugin1 plugin2 pligin3).")</span>
     </div>
 </fieldset>
+<script type="text/javascript">
+    $(function () {
+        $("#btnDefaultInitValue").click(function (e) {
+            $("#lblDefaultInitValue").toggle();
+        });
+    });
+</script>
