tinymce enhancement: added italian translations and removed a separator in additional plugins list

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/TinyMceSiteSettings.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts/TinyMceSiteSettings.cshtml
@@ -15,7 +15,7 @@
     <div>
         <label for="@Html.FieldIdFor(m => m.AdditionalPlugins)">@T("Additional Plugins")</label>
         @Html.TextAreaFor(m => m.AdditionalPlugins, new { @class = "text large" })
-        <span class="hint">@T("A list of additional plugins. Use space as separator (eg. plugin1 plugin2 pligin3).")</span>
+        <span class="hint">@T("A list of additional plugins. Use newline as separator. If a plugin does not have a plugin.min.js file, please specify the correct file name in the plugin folder.<br/>Examples:<br/>plugin1<br/>plugin2<br/>pligin3/editor_plugin.js")</span>
     </div>
 </fieldset>
 <script type="text/javascript">
