--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -41,7 +41,7 @@ $(document).ready(function() {
     cookiesettings.cookieTitle = '@part.cookieTitle';
     if (@(part.cookieMessage.Length) > 0)
         cookiesettings.cookieMessage = '@Html.Raw(part.cookieMessage.Replace(System.Environment.NewLine, "<br/>").Replace("'", "&apos;"))';
-    cookiesettings.cookiePolicyLink = '@Url.Encode(part.cookiePolicyLink)';
+    cookiesettings.cookiePolicyLink = '@Html.Raw(part.cookiePolicyLink.Replace("'", "\\'"))';
     cookiesettings.cookieMessage = cookiesettings.cookieMessage + "<p id=\"ccPolicyMsgLink\"><a href=\"" + cookiesettings.cookiePolicyLink + "\">@part.cookiePolicyPageMessage</a></p>";
     // user options
     cookiesettings.cookieMessage = cookiesettings.cookieMessage + '<form><div style="display:inline-block;margin:auto;clear:both;width:100%"><div class="cc-cookie-checks">';
@@ -56,7 +56,22 @@ $(document).ready(function() {
     cookiesettings.cookieResetButton = @cookieResetButton;
     cookiesettings.cookieResetButtonText = '@part.cookieResetButtonText';
     cookiesettings.cookieExpectedValue = "@Html.Raw(gdprScriptService.GetCurrentCookiePrefix())";
-    cookiesettings.cookieAccepted = (@gdprScriptService.IsCookieAccepted() == 1);
+    var getCookie = function (cname) {
+        var name = cname + "=";
+        var decodedCookie = decodeURIComponent(document.cookie);
+        var ca = decodedCookie.split(';');
+        for (var i = 0; i < ca.length; i++) {
+            var c = ca[i];
+            while (c.charAt(0) == ' ') {
+                c = c.substring(1);
+            }
+            if (c.indexOf(name) == 0) {
+                return c.substring(name.length, c.length);
+            }
+        }
+        return "";
+    };
+    cookiesettings.cookieAccepted = getCookie("cc_cookie_accept").startsWith(cookiesettings.cookieExpectedValue);
     if (@isPolicyPage) {
         cookiesettings.cookiePolicyPage = true;
     }
