--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
@@ -98,9 +98,16 @@
                                                             scheduledTitle += " " + @T("Scheduled Archive") + ": " + @Display.DateTime(DateTimeUtc: archiveLaterPart.ScheduledArchiveUtc.Value, CustomFormat: null).ToString();
                                                         }
                                                     }
+
+                                                    int numberLocPart = widget.ContentItem.Parts.Where(x => x.PartDefinition.Name == "LocalizationPart").Count();
+                                                    String culture = "";
+                                                    if (numberLocPart > 0) {
+                                                        dynamic localizationPart = widget.ContentItem.Parts.Where(x => x.PartDefinition.Name == "LocalizationPart").First();
+                                                        culture = localizationPart.Culture.Culture;
+                                                    }
                                                 }
                                                 <h3>
-                                                    <a href="@Url.Action("EditWidget", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, id = widget.Id, returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">@Html.ItemDisplayText(widget)</a>
+                                                    <a href="@Url.Action("EditWidget", "Admin", new { area = "Contrib.Widgets", hostId = contentItem.Id, id = widget.Id, returnUrl = ViewContext.RequestContext.HttpContext.Request.Url.PathAndQuery })">@Html.ItemDisplayText(widget) (@culture)</a>
                                                 </h3><span>
                                                     <div class="contentType">
                                                         - @widget.TypeDefinition.DisplayName
