--- a/src/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml
+++ b/src/Modules/Laser.Orchard.ContactForm/Views/Parts/ContactForm.cshtml
@@ -74,6 +74,9 @@
         <input id="MediaId-@uniqueId" name="MediaId" type="hidden" value="" />
         @Html.AntiForgeryTokenOrchard()
         <input id="attachment_button-@uniqueId" type="button" @Html.Raw(displayAttachmentButton) value="@T("Add attachment")" />
+        
+        @Display(Model.AdditionalShape.Content)
+
         <input type="submit" value="@T("Send")" />
     }
 }
