--- a/src/Themes/KrakeAdmin/Views/Document.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Document.cshtml
@@ -42,7 +42,7 @@ Style.Require("FontAwesome").AtHead();
 Style.Include("iconic-font.min.css").AtHead();
 Style.Include("https://fonts.googleapis.com/css?family=Roboto:400,700,500,300,100,900").AtHead();
 //custom
-Style.Include("krake.css?date=30062016").AtHead(); //dsweb custom styles TO DO JOIN with krakeadmin.css!!
+Style.Include("krake.css?v1.3").AtHead(); //dsweb custom styles TO DO JOIN with krakeadmin.css!!
 Style.Include("krakeadmin.css?date=29112016").AtHead(); //dsweb custom styles
 Style.Include("krake-navicon.css").AtHead();
 
