modificati alternate contact form, per visualizzare recaptcha part sul sito laser e sito krake

--- a/src/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml
+++ b/src/Themes/Lasergroup/Views/Parts/ContactForm-AfterContentContattiPage.cshtml
@@ -77,6 +77,8 @@
                     </span>
                 </div>
 
+                @Display(Model.AdditionalShape.Content)
+
                 <div id="AttachmentSection-@uniqueId" type="hidden">
                     <img id="AttachmentPreview-@uniqueId"></img>
                     <label id="AttachmentNameLabel-@uniqueId"></label>
