--- a/src/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml
+++ b/src/Themes/Lasergroup/Views/Parts/ContactForm-FormContattoVertical.cshtml
@@ -154,7 +154,7 @@
                     </span>
                 </div>
 
-
+                @Display(Model.AdditionalShape.Content)
 
                 <input id="ReturnUrl-@uniqueId" name="ReturnUrl" type="hidden" value="@Context.Request.RawUrl" />
                 <input id="Id-@uniqueId" name="Id" type="hidden" value="@uniqueId" />
@@ -165,14 +165,14 @@
                 @Html.AntiForgeryTokenOrchard()
                 <div class="row">
                     @if (!string.IsNullOrWhiteSpace(privacyUrl)) {
-                    <div class="col-md-10">
-                        <div class="form-group">
-                            <span class="wpcf7-form-control-wrap">
-                                <input id="Accept-@uniqueId" name="Accept" type="checkbox" required aria-invalid="false" value="1" /><span class="required">*</span>
-                                @prePrivacyText <a href="@privacyUrl" target="@privacyTarget">@privacyLinkText</a>
-                            </span>
+                        <div class="col-md-10">
+                            <div class="form-group">
+                                <span class="wpcf7-form-control-wrap">
+                                    <input id="Accept-@uniqueId" name="Accept" type="checkbox" required aria-invalid="false" value="1" /><span class="required">*</span>
+                                    @prePrivacyText <a href="@privacyUrl" target="@privacyTarget">@privacyLinkText</a>
+                                </span>
+                            </div>
                         </div>
-                    </div>
                     }
                     <div class="col-md-2">
                         <p>
@@ -180,7 +180,7 @@
                         </p>
                     </div>
                 </div>
-                
+
 
             }
         }
