Fix per encorare i titoli presenti nella barra dei titoli. (bug riscontrato su Vda Events per le catogorie con nomi in francese e lettere accentate)

--- a/src/Themes/KrakeAdmin/Views/User.cshtml
+++ b/src/Themes/KrakeAdmin/Views/User.cshtml
@@ -48,7 +48,7 @@
         </li>
         <li class="header-nav-brand">
             <div class="brand-holder">
-                <span class="text-lg text-bold text-primary">@siteLinkText - @Layout.Title</span>
+                <span class="text-lg text-bold text-primary">@siteLinkText - @WebUtility.HtmlDecode(Layout.Title)</span>
             </div>
         </li>
     </ul>
