--- a/src/Themes/Lasergroup/Views/Register.cshtml
+++ b/src/Themes/Lasergroup/Views/Register.cshtml
@@ -15,8 +15,7 @@
         additionalRequirementsMessage.Add(T("one special character").Text);
     }
     if (additionalRequirementsMessage.Count() > 0) {
-        requirementsMessage += T(" and must contain at least ");
-        requirementsMessage += string.Join(", ", additionalRequirementsMessage);
+        requirementsMessage = T("{0} and must contain at least {1}", requirementsMessage, string.Join(", ", additionalRequirementsMessage)).Text;
     }
     requirementsMessage += ".";
 }
