--- a/src/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml
+++ b/src/Modules/Laser.Orchard.OpenAuthentication/Views/Admin/Edit.cshtml
@@ -26,7 +26,7 @@
     <fieldset>
         @Html.LabelFor(m => m.ProviderIdentifier, T("Identifier"))
         @Html.TextBoxFor(m => m.ProviderIdentifier)
-        <span class="hint">@T("This is the url to the end point. If Apple Authentication Provider is selected, this is the Key ID.")</span>
+        <span class="hint">@T("This is the url to the end point. If Apple Authentication Provider is selected, this is the Key ID and the certificate file has to be name as AuthKey_<Key ID>.p8 and placed in App_Data/Sites/tenant folder.")</span>
     </fieldset>
     <fieldset>
         @Html.LabelFor(m => m.UserIdentifier, T("User Name (used for twitter post)"))
